--- a/css/style.css
+++ b/css/style.css
@@ -798,6 +798,19 @@ margin-top: 24px;
         
             margin-top: 240px;
         }
+
+        .footer footer .logo img {
+            width: 80px;
+        }
+
+        .footer footer .mensagem {
+            margin-left: 300px;
+        }
+
+        .footer footer .mensagem h5 {
+            font-size: 25px;
+            
+        }
     }
 
     @media (max-width: 909px) {
@@ -873,6 +886,16 @@ margin-top: 24px;
             padding: 0px 190px;
         }
     }
+
+    @media (max-width: 875px){
+        .footer footer .mensagem h5 {
+            font-size: 20px;
+        }
+
+        .footer footer .mensagem {
+            margin-left: 200px;
+        }
+    }
     @media (max-width: 800px) {
          /**Who number**/
          .number_who .information .information_number {
@@ -897,6 +920,18 @@ margin-top: 24px;
             width: 250px;
         }
         
+        .footer footer .mensagem h5 {
+            font-size: 17px;
+            margin-left: -70px;
+        }
+
+        .footer footer .mensagem {
+            margin-left: 200px;
+        }
+
+        .footer footer .logo img {
+            width: 74px;
+        }
     }
 
     @media (max-width: 680px) {
@@ -947,6 +982,11 @@ margin-top: 24px;
             width: 70px;
         }
 
+        .imgOverlay .imageTitle {
+            font-size: 1em;
+            font-weight: bold;
+        }
+
         .features-img img {
         margin-left: 40px;
         }
@@ -956,6 +996,12 @@ margin-top: 24px;
             padding: 0px 140px;
         }
 
+    }
+
+    @media(max-width: 500px){
+        .footer footer .logo img {
+            margin-top: 60px;
+        }
     }
     @media (max-width: 450px) {
         html {
