--- a/css/style.css
+++ b/css/style.css
@@ -731,7 +731,11 @@ margin-top: 24px;
     .adjust_project .btn_projects:hover {
         background: var(--color_blue);
     }
-    
+
+    .adjust_project .btn_projects a{
+        text-decoration: none;
+        color: var(--color_white);
+    }    
     .adjust_project .social_media_project {
         float: right;
         margin-top: 550px;
@@ -877,6 +881,7 @@ margin-top: 24px;
     }
 
     @media (max-width: 875px){
+       
         .footer footer .mensagem h5 {
             font-size: 20px;
         }
@@ -913,6 +918,7 @@ margin-top: 24px;
 
         .adjust_project .social_media_project {
             margin-top: 50px;
+            width: 100%;
             float: none;
         }
 
@@ -979,6 +985,12 @@ margin-top: 24px;
         .partners .logo_partners .the_partners{
             width: 90px;
         }
+
+        .form .container .context .container_left{
+            float: none;
+            width: 100%;
+        }
+
         .form .container .context .container_left p{
             width: 450px;
         }
@@ -998,6 +1010,8 @@ margin-top: 24px;
             width: 400px;
             margin-bottom: 40px;
         }
+
+        
     }
 
     @media (max-width: 593px){
@@ -1020,6 +1034,12 @@ margin-top: 24px;
             padding: 0px 140px;
         }
 
+    }
+
+    @media(max-width: 505px){
+        .form .container .context .container_left{
+            width: 470px;
+        }
     }
 
     @media(max-width: 500px){
