--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
         font-family: "Open-sans", sans-serif;
         text-decoration: none;
         list-style: none;
+        
     }
     /**Colors**/
     
@@ -29,7 +30,7 @@
         margin-bottom: 15px;
         font-weight: 700;
         text-align: center;
-        background-image: linear-gradient(to bottom,  var(--color_blue), var(--color_orange));
+        background-image:linear-gradient(to bottom,  var(--color_blue), var(--color_orange));
   
         /* Segundo passo: apagar do fundo tudo que não estiver imediatamente atrás de texto */
         background-clip: text;
@@ -410,59 +411,13 @@ margin-top: 24px;
         font-size: 1.25em;
         margin-top: 8.25em;
     }
-    /**Partners**/
-    
-    .partners {
-        background: var(--color_gray_service);
-        width: 100%;
-        height: 300px;
-        align-items: center;
-        justify-content: center;
-        margin-left: 0;
-    }
-    
-    .partners .title_text {
-        text-align: center;
-    }
-    
-    .partners .title_text .title_h1 {
-        margin-top: 54px;
-    }
-    
-    .partners .title_text .partners_text {
-        margin-top: 80px;
-    }
-    
-    .partners .title_text .left {
-        margin-left: 596px;
-        width: 150px;
-    }
-    
-    .partners .logo_partners {
-        width: 70%;
-        margin: auto;
-        margin-top: 100px;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        flex-wrap: wrap;
-    
-    }
-    
-    .partners .logo_partners .the_partners {
-        width: 100%;
-        display: contents;
-    }
-    
-    .partners .logo_partners .the_partners img {
-        width: 110px;
-    }
 
     /**FAQ**/
     
     .faq {
         margin-top: 70px;
-        
+        background: var(--color_gray_service);
+        padding: 70px 0px;
     }
     
     .faq .title_text {
@@ -581,6 +536,7 @@ margin-top: 24px;
     .form .container .context .container_right h5 {
         font-size: 23px;
         margin-top: -50px;
+        color: var(--color_blue);
     }
     
     .form .container .context .container_right .title_h1 {
@@ -668,10 +624,12 @@ margin-top: 24px;
     .copy p a {
         text-decoration: none;
         color: var(--color_white);
+        transition: 0.5s;
     }
     
     .copy p a:hover {
-        color: var(--color_green);
+        font-weight: 300;
+        font-size: 18px;
     }
     /**PROJECTS.HTML**/
     
@@ -715,7 +673,7 @@ margin-top: 24px;
     }
     
     .adjust_project .btn_projects {
-        border: 1px solid rgba(0, 0, 0, 0.6);
+        border: none;
         background: var(--color_orange);
         color: var(--color_white);
         width: 170px;
