--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 .title_h1 {
   font-size: 3.2rem;
   text-transform: uppercase;
-  margin-bottom: 15px;
+  margin-bottom: 75px;
   font-weight: 700;
   text-align: center;
   background-image: linear-gradient(
@@ -168,12 +168,13 @@ nav #icon {
 
 .services .text_services{
   width: 100%;
-  margin-left: 23rem;
+  margin-left: 18rem;
 }
 
 .services .text_services p{
-  width: 50%;
-  font-size: 15px;
+  width: 60%;
+  font-size: 17px;
+  padding: 3rem 0rem;
   color: #0f0f0f;
 }
 
@@ -191,6 +192,7 @@ nav #icon {
   cursor: pointer;
   width: 20rem;
   margin-left: 18rem;
+  box-shadow: 20px solid #0f0f0f;
 }
 
 .services .row .col .card .card-body {
@@ -200,7 +202,7 @@ nav #icon {
 
 .services .row .col .card .card-body .titleservice {
   font-size: 40px;
-  font-weight: 400;
+  font-weight: 600;
   text-decoration: none;
   color: var(--color_gray);
 }
