--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
   list-style: none;
 
 }
+
+html{
+  scroll-behavior: smooth;
+}
 /**Colors**/
 
 :root {
@@ -57,6 +61,10 @@
 .reveal.active {
   transform: translateY(0px);
   opacity: 1;
+}
+
+.overflow{
+  overflow: hidden;
 }
 
 ul {
@@ -160,6 +168,7 @@ nav #icon {
 /**Services**/
 
 .services {
+ 
   padding: 120px 0px;
 }
 
@@ -691,6 +700,15 @@ nav #icon {
   margin-top: 6px;
 }
 
+@media (max-width: 1096px){
+
+  .services .row{
+    display: block;
+    align-items: center;
+  }
+
+}
+
 @media (max-width: 1000px) {
   nav img {
     width: 70px;
@@ -742,13 +760,11 @@ nav #icon {
     margin-top: 13px;
   }
   nav ul {
-    position: fixed;
+    position: absolute;
     width: 100%;
-    height: 100vh;
     background: var(--color_blue);
-    top: 70px;
-    left: -100%;
     text-align: center;
+    left: -100%;
     transition: all 0.5s;
     margin-top: 10px;
     z-index: 1000;
@@ -852,6 +868,12 @@ nav #icon {
 }
 
 @media (max-width: 704px) {
+
+  .services .row .col .card{
+    width: 80%;
+    margin-left: 70%;
+  }
+
   .faq .configure_faq .accordion .accordion-item {
     width: 250px;
   }
@@ -940,6 +962,11 @@ nav #icon {
   .form .container .context .container_left {
     width: 470px;
   }
+
+  .services .row .col .card{
+    width: 60%;
+    margin-left: 45%;
+  }
 }
 
 @media (max-width: 500px) {
@@ -958,4 +985,23 @@ nav #icon {
   .active a {
     font-size: 1.8rem;
   }
+  .services .row .col .card{
+    width: 51%;
+    margin-left: 27%;
+  }
+  .services .row .col .card .card-body .titleservice{
+    font-size: 20px;
+  }
+
+  .services .row .col .card .card-body .textservice{
+    font-size: 11px;
+  }
 }
+
+@media (max-width: 270px) {
+  .services .row .col .card{
+    width: 45%;
+    margin-left: 20%;
+  }
+}
+
